# alice-engine

./: .claude.md  .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  check_system.ps1  check_vscode.ps1  dvc.yaml  iso-standards-reference.md  mkdocs.yml  push-safe.bat  pyproject.toml  pytest.ini  render.yaml  requirements-dev.txt  requirements-prod.txt  requirements.txt  start-vscode-light.bat  train-headless.bat  uninstall-heavy-extensions.bat  vercel.json
.claude/: settings.json
.claude/hooks/: inject_pipeline.py  pipeline_gate.py  pipeline_state.json  post_validate.py  pre_check.py  stop_summary.py
.claude/rules/: docs-index.md  kaggle-architecture.md  project-structure.md  v8-training-findings.md
.github/workflows/: ci.yml
app/: __init__.py  config.py  logging_config.py  main.py
app/api/: __init__.py  compose_helpers.py  compose_scenarios.py  routes.py  schemas.py
config/: MODEL_SPECS.md  README.md  clubs_teams_2024.json  hyperparameters.yaml
config/ffe_rules/: a02.json  alice_verifiability.json
docs/: API_CONTRACT.md  CDC_ALICE.md  CONTEXTE_INTEGRATION.md  DEPLOIEMENT_RENDER.md  bilan-v8-fe-complete.md  index.md
docs/architecture/: ADR-002-inference-feature-construction.md  ADR-003-single-model-kernels.md  ADR-004-alpha-per-model.md  ADR-008-alpha-per-model.md  ALI_ARCHITECTURE.md  ARCHITECTURE.md  DECISIONS.md
docs/audit/: 2026-06-10-global-health-audit.md
docs/development/: CONTRIBUTING.md  PYTHON-HOOKS-SETUP.md
docs/devops/: GITHUB_ACTIONS_DISK_CLEANUP.md  ML_MODEL_VERSIONING_STANDARDS.md  PRE_PUSH_WORKFLOW.md
docs/iso/: AG_ASSISTANT_ANALYSIS.md  AI_DEVELOPMENT_DISCLOSURE.md  AI_POLICY.md  AI_RISK_ASSESSMENT.md  AI_RISK_REGISTER.md  ALI_MODEL_CARD.md  ALI_QUALITY_GATES_REPORT.md  IMPLEMENTATION_STATUS.md  ISO_COMPLIANCE_TODOS.md  ISO_MAPPING.md  ISO_PIPELINE_HOOKS.md  ISO_STANDARDS_REFERENCE.md  MODEL_CARD_PREFERENCE_2024.md  STATEMENT_OF_APPLICABILITY.md
docs/operations/: DEPLOIEMENT_OCI.md
docs/plans/: AUDIT_ISO_PLAN.md  AUTOGLUON_IMPLEMENTATION_PLAN.md  ISO_5055_ARCHITECTURE_PLAN.md
docs/postmortem/: 2026-03-21-autogluon-kaggle-postmortem.md  2026-03-22-training-v8-divergence.md  2026-03-25-resultat-blanc-2.0-bug.md  2026-03-28-split-temporal-nan-features.md  2026-04-07-skipped-optuna-tuning.md  2026-04-08-optuna-xgboost-v3-limitations.md  2026-04-16-autogluon-v9-time-allocation-failure.md  2026-04-16-catboost-oof-snapshot-crash.md
docs/process/: PRE_V1_AUDIT_TEMPLATE.md
docs/project/: ANALYSE_INITIALE_ALICE.md  BILAN_DONNEES.md  BILAN_PARSING.md  CHANGELOG.md  DEBT_LEDGER.md  INSTRUCTIONS_PROJET.md  METHODOLOGIE_ML_TRAINING.md  ML_EVALUATION_RESULTS.md  PLAN_RAZ_ML_TRAINING.md  RAPPORT_SCRAPING.md  TRAINING_PROGRESS.md  V8_MODEL_COMPARISON.md  V9_HP_SEARCH_RESULTS.md
docs/requirements/: CDC_ALICE.md  CONTEXTE_DATASET_FFE.md  CONTEXTE_INTEGRATION.md  DONNEES_ALICE_ENGINE.md  FEATURE_DOMAIN_LOGIC.md  FEATURE_SPECIFICATION.md  QUALITY_GATES.md  REGLES_FFE_ALICE.md
docs/security/: ALI_THREAT_MODEL.md
graphs/: circular-imports.txt
models/: .gitkeep
models/cache/: mlp_champion_metadata.json
notebooks/: alice_ml_training_kaggle.ipynb
optuna_studies/: best_params_xgboost.json
reports/: ISO_25059_TRAINING_REPORT_v20260117.md  architecture-health.json  iso24027_fairness_enhanced.json  iso24029_robustness_enhanced.json  iso42005_impact_assessment_enhanced.json  kaggle_upload_log.jsonl  pilot_phase4a_2026-06-16.md
reports/backtest/: ali_holdout_2024.json
reports/complexity/: cyclomatic.txt  index.html  maintainability.txt  raw_metrics.txt
reports/duplication/: duplicates.txt
reports/iso-audit/: ISO_AUDIT_REPORT.md  iso-audit-report.json
reports/v8_xgboost_v5_resume/: classification_reports.json  metadata.json
reports/validation/: raw_echiquiers_report.json  raw_joueurs_report.json
schemas/: __init__.py  parsing_schemas.py  parsing_validation.py  training_constants.py  training_schemas.py  training_types.py  training_validation.py
scripts/: __init__.py  analyze_architecture.py  audit_iso_conformity.py  baselines.py  build_clubs_teams.py  build_feature_store.py  ensemble_stacking.py  evaluate_models.py  evaluate_stacking.py  feature_engineering.py  ffe_rules_features.py  generate_graphs.py  generate_ml_graphs.py  kaggle_artifacts.py  kaggle_constants.py  kaggle_diagnostics.py  kaggle_metrics.py  kaggle_quality_gates.py  kaggle_shap.py  kaggle_trainers.py  ml_types.py  model_registry.py  parse_dataset.py  profile_performance.py  setup-dev.ps1  sync_ffe_rules.py  train_meta_learner.py  train_models_parallel.py  train_preference_model.py  update_iso_docs.py  verify_plan1_dod.sh  verify_plan2_dod.sh  verify_plan3_dod.sh
scripts/agents/: __init__.py  iso_knowledge.py  iterative_refinement.py  refinement_helpers.py  semantic_memory.py
scripts/aimms/: __init__.py  aimms_types.py  postprocessor.py  run_iso42001_postprocessing.py
scripts/d8/: dro.py  (+35 more)
services/: __init__.py  composer.py  data_loader.py  feature_store.py  ffe_rules.py  inference.py
tasks/: __init__.py  architecture.py  dev.py  iso_audit.py  ml_lifecycle.py  monitoring.py  quality.py  testing.py
tests/: __init__.py  conftest.py  conftest_bias.py  conftest_drift.py  conftest_input.py  conftest_ml.py  conftest_robustness.py  test_ali_cache.py  test_ali_types.py  test_architecture_metrics.py  test_artifacts.py  test_artifacts_onnx.py  test_autogluon_iso_compliance.py  test_autogluon_trainer.py  test_autogluon_v9.py  test_benchmarks.py  test_bias_tracker.py  test_bias_types.py  test_cloud_features.py  test_cloud_promote.py  test_cloud_training.py  test_compose_ali_aggregation.py  test_compose_e2e.py  test_composer.py  test_config_phase3.py  test_data_loader.py  test_drift_monitor.py  test_drift_stats.py  test_drift_types.py  test_ensemble_factory.py  test_ensemble_stacking.py  test_evaluation.py  test_explainability.py  test_explainability_shap.py  test_fairness_bias_detection.py  test_feature_engineering.py  test_feature_engineering_v2.py  test_features_ali.py  test_features_ce.py  test_features_enjeu.py  (+50 more)
(+638 files in other folders)
