# pyproject.toml
# Configuration projet Python - ISO 5055 (Qualite code)

[project]
name = "alice-engine"
version = "0.1.0"
description = "Adversarial Lineup Inference & Composition Engine"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Pierre-Alexandre"}
]
keywords = ["chess", "prediction", "machine-learning", "xgboost", "catboost"]

[project.urls]
Documentation = "https://alice-engine.onrender.com/docs"
Repository = "https://github.com/xxx/alice-engine"

# ============================================
# RUFF - Linting rapide (remplace flake8, isort, etc.)
# ============================================
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "S",      # flake8-bandit (securite)
    "N",      # pep8-naming
    "ANN",    # flake8-annotations (ISO 5055 strict typing)
    "D",      # pydocstyle (docstrings)
    "PLC",    # pylint convention
    "PLR",    # pylint refactor
    "TCH",    # flake8-type-checking
    "G",      # flake8-logging-format
    # Note: COM (commas) disabled - conflicts with ruff formatter
]
ignore = [
    "E501",   # line too long (gere par line-length)
    "S101",   # assert (ok pour tests)
    "B008",   # function call in default arg (ok pour FastAPI Depends)
    "ANN401", # Any disallowed - elimine manuellement
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D203",   # 1 blank line before class (incompatible D211)
    "D213",   # Multi-line summary second line (incompatible D212)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",              # assert ok dans tests
    "D102",              # docstrings method optionnel
    "D103",              # docstrings fonction optionnel
    "D401",              # imperative mood optionnel
    "ANN",               # annotations optionnelles
    "PLR2004",           # magic values ok (test values)
    "N806",              # X uppercase ok (ML convention)
    "B007",              # loop variable unused ok
    "F841",              # unused variable ok (mocks)
]
"scripts/**/*.py" = [
    "S603", "S607",      # Scripts internes de confiance
    "N802", "N803", "N806",  # ML convention: X_train, X_test (majuscules features)
    "G004", "G003",      # f-string/concat logging ok (lisibilite)
    "PLC0415",           # imports in functions (lazy imports ML)
    "PLR0913",           # too many arguments (ML training functions)
    "PLR0912", "PLR0915",  # too many branches/statements (ML pipelines)
    "D401",              # imperative mood (non-anglais)
    "D413",              # blank line after last section
    "PLR2004",           # magic values (ML thresholds)
    "TCH001", "TCH003", "TCH004",  # type imports flexibility
    "ANN101", "ANN102",  # self/cls annotation (redundant in Python)
]
"app/**/*.py" = [
    "ANN101", "ANN102",  # self/cls annotation (redundant in Python)
]
"services/**/*.py" = [
    "ANN101", "ANN102",  # self/cls annotation (redundant in Python)
]

[tool.ruff.lint.isort]
known-first-party = ["app", "services"]

# ============================================
# MYPY - Type checking
# ============================================
[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false  # Progressive adoption
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "scripts.*"
ignore_errors = true

# ============================================
# PYTEST
# ============================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

# ============================================
# COVERAGE
# ============================================
[tool.coverage.run]
source = ["app", "services"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

# ============================================
# BANDIT - Security linting
# ============================================
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "scripts"]
skips = ["B101", "B104"]  # B104: 0.0.0.0 binding ok pour Render

# ============================================
# COMMITIZEN - Conventional commits
# ============================================
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = ["pyproject.toml:version"]
update_changelog_on_bump = true
